--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build": "eas build -p android --profile preview"
   },
   "dependencies": {
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
+    "axios": "^1.7.9",
     "expo": "~52.0.31",
+    "expo-camera": "~16.0.16",
+    "expo-dev-client": "~5.0.11",
     "expo-navigation-bar": "~4.0.8",
     "expo-status-bar": "~2.0.1",
     "lucide-react-native": "^0.475.0",
