--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "eas build -p android --profile preview"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "axios": "^1.7.9",
