--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "react-native": "0.76.7",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.6.0",
-    "remove": "^0.1.5"
+    "remove": "^0.1.5",
+    "react-dom": "18.3.1",
+    "react-native-web": "~0.19.13",
+    "@expo/metro-runtime": "~4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
